examples/type_system/failing/61_strict_generic_unresolved_boundary.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E425: strict mode rejects unresolved generic runtime boundary checks.
public fn id<T>(x: T) -> T {
    x
}

fn main() -> Unit {
    let _ = id(1)
}
